<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_menu_speak"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_point_fill_circle"
            android:padding="28dp"
            android:text="대화\n켜기"
            android:textAppearance="@style/TextAppearance.Kiumee.head5_smbold_50"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/av_menu_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/btn_menu_speak"
            app:layout_constraintStart_toEndOf="@id/btn_menu_speak"
            app:layout_constraintTop_toTopOf="@id/btn_menu_speak"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_audio" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_menu_tab"
            android:layout_width="240dp"
            android:layout_height="0dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="26dp"
            app:layout_constraintBottom_toTopOf="@id/btn_menu_speak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_menu_tab_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:text="@string/menu_tab_title"
                android:textAppearance="@style/TextAppearance.Kiumee.head2_smbold_58"
                app:layout_constraintBottom_toTopOf="@id/rv_menu_tab_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_menu_tab_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_menu_tab_title"
                tools:listitem="@layout/item_menu_tab" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_menu_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingHorizontal="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/layout_menu_cart"
            app:layout_constraintStart_toEndOf="@id/layout_menu_tab"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_menu_chat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="28dp"
                android:background="@drawable/shape_pale_fill_20_rect"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_menu_chat"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="18dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/item_chat_jumi" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_menu_chat_guide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:listitem="@layout/item_chat_guide" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_menu_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_menu_menu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="28dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/item_menu" />

                <TextView
                    android:id="@+id/tv_menu_menu_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="28dp"
                    android:background="@drawable/shape_white_fill_25_rect"
                    android:backgroundTint="@color/pale"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:paddingHorizontal="23dp"
                    android:paddingVertical="13dp"
                    android:text="@string/tv_menu_menu_close"
                    android:textAppearance="@style/TextAppearance.Kiumee.cap2_regular_32"
                    android:textColor="@color/gray_12"
                    app:layout_constraintBottom_toBottomOf="@id/vp_menu_menu"
                    app:layout_constraintEnd_toEndOf="@id/vp_menu_menu"
                    app:layout_constraintStart_toStartOf="@id/vp_menu_menu" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_menu_cart"
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:background="@color/gray_1"
            android:paddingHorizontal="30dp"
            android:paddingVertical="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_menu_cart_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_cart_title"
                android:textAppearance="@style/TextAppearance.Kiumee.head2_smbold_58"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ib_menu_cart_trash_total"
                android:layout_width="58dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:src="@drawable/ic_menu_cart_trash"
                app:layout_constraintBottom_toBottomOf="@id/tv_menu_cart_title"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_menu_cart_title" />

            <View
                android:id="@+id/view_menu_cart_top"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray_4"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_menu_cart_title" />

            <TextView
                android:id="@+id/tv_menu_cart_empty"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="12dp"
                android:text="@string/menu_cart_select"
                android:textAppearance="@style/TextAppearance.Kiumee.body6_regular_38"
                android:textColor="@color/gray_10"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/view_menu_cart_bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_menu_cart_top" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_menu_cart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="12dp"
                android:orientation="vertical"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/view_menu_cart_bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_menu_cart_top"
                tools:listitem="@layout/item_menu_cart" />

            <View
                android:id="@+id/view_menu_cart_bottom"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray_4"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@id/tv_menu_cart_total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_menu_cart_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginBottom="10dp"
                android:text="@string/menu_cart_total"
                android:textAppearance="@style/TextAppearance.Kiumee.body4_regular_44"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@id/btn_menu_cart_order"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_menu_cart_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:textAppearance="@style/TextAppearance.Kiumee.body3_medium_44"
                android:textColor="@color/point"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_menu_cart_total"
                tools:text="13,000원" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_menu_cart_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_primary_fill_15_rect"
                android:paddingVertical="12dp"
                android:text="@string/menu_cart_order"
                android:textAppearance="@style/TextAppearance.Kiumee.head3_medium_54"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>